--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,20 +5,18 @@
          version="2.5"
          xmlns="http://java.sun.com/xml/ns/javaee">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>org.dyndns.merelin.pchrc.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/popcornhour_controller/greet</url-pattern>
-  </servlet-mapping>
-  
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>Popcornhour_controller.html</welcome-file>
-  </welcome-file-list>
+    <servlet>
+        <servlet-name>discoveryServlet</servlet-name>
+        <servlet-class>org.dyndns.merelin.pchrc.server.DiscoveryServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>discoveryServlet</servlet-name>
+        <url-pattern>/popcornhour_controller/discovery</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>Popcornhour_controller.html</welcome-file>
+    </welcome-file-list>
 
 </web-app>
